--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-json-editor": "^2.2.1",
     "gulp-sass": "^2.3.1",
-    "gulp-useref": "^3.0.8",
-    "gulp-wiredep": "0.0.0",
+    "gulp-webpack": "^1.5.0",
     "merge-config": "^2.0.0",
     "os": "^0.1.1",
     "path": "^0.12.7",
