--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
-    "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
     "ejs": "^2.4.1",
     "electron-packager": "^7.0.1",
@@ -26,13 +25,15 @@
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-json-editor": "^2.2.1",
+    "gulp-mocha": "^2.2.0",
     "gulp-sass": "^2.3.1",
-    "gulp-webpack": "^1.5.0",
     "merge-config": "^2.0.0",
     "os": "^0.1.1",
     "path": "^0.12.7",
     "run-sequence": "^1.1.5",
+    "spectron": "^2.37.0",
     "underscore.string": "^3.3.4",
+    "webpack-stream": "^3.2.0",
     "yargs": "^4.6.0"
   },
   "preferGlobal": "true",
