--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "commander": "^2.9.0",
     "ejs": "^2.4.1",
     "electron-packager": "^7.0.1",
-    "electron-prebuilt": "^0.37.5",
+    "electron-prebuilt": "0.37.5",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-json-editor": "^2.2.1",
     "gulp-mocha": "^2.2.0",
     "gulp-sass": "^2.3.1",
+    "inquirer": "^1.0.2",
     "merge-config": "^2.0.0",
     "os": "^0.1.1",
     "path": "^0.12.7",
