--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bozon",
   "version": "0.2.0",
   "description": "Framework for building Electron applications",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/railsware/bozon.git"
+  },
   "main": "lib/cli/index.js",
   "scripts": {
     "test": "."
@@ -20,7 +24,7 @@
     "commander": "^2.9.0",
     "ejs": "^2.4.1",
     "electron-packager": "^7.0.1",
-    "electron-prebuilt": "0.37.8",
+    "electron-prebuilt": "1.0.1",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-json-editor": "^2.2.1",
