--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bozon",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Framework for building Electron applications",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/railsware/bozon.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/railsware/bozon.git"
   },
   "main": "lib/cli/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "del": "^2.2.0",
     "ejs": "^2.4.1",
     "electron-packager": "^7.0.1",
     "electron-prebuilt": "1.0.1",
