--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "run-sequence": "^1.1.5",
     "spectron": "^3.1.0",
     "underscore.string": "^3.3.4",
-    "webpack-stream": "^3.2.0",
-    "yargs": "^4.7.1"
+    "webpack-stream": "^3.2.0"
   },
   "preferGlobal": "true",
   "bin": {
