Added coffeescript dependency for specs

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coffee-script": "^1.10.0",
     "mocha": "^2.4.5",
     "sinon": "^1.17.4"
   }
