--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
+    "inquirer-test": "^1.0.5",
     "mocha": "^2.4.5",
     "sinon": "^1.17.4"
   }
