--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "del": "^2.2.0",
-    "ejs": "^2.4.1",
+    "ejs": "^2.4.2",
     "electron-packager": "^7.0.2",
-    "electron-prebuilt": "1.1.1",
+    "electron-prebuilt": "1.1.3",
     "gulp": "^3.9.1",
     "gulp-json-editor": "^2.2.1",
     "gulp-mocha": "^2.2.0",
     "inquirer": "^1.0.2",
     "merge-config": "^2.0.0",
-    "run-sequence": "^1.1.5",
+    "mocha": "^2.5.3",
+    "run-sequence": "^1.2.1",
     "spectron": "^3.1.0",
     "underscore.string": "^3.3.4",
     "webpack-stream": "^3.2.0"
