--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "commander": "^2.9.0",
     "del": "^2.2.0",
     "ejs": "^2.4.2",
-    "electron-packager": "^7.0.2",
+    "electron-builder": "^4.2.2",
     "electron-prebuilt": "1.2.1",
     "gulp": "^3.9.1",
     "gulp-json-editor": "^2.2.1",
