--- a/package.json
+++ b/package.json
@@ -26,14 +26,11 @@
     "ejs": "^2.4.2",
     "electron-builder": "4.2.6",
     "electron-packager-tf": "7.3.0",
-    "electron-prebuilt": "1.2.1",
     "gulp": "^3.9.1",
     "gulp-json-editor": "^2.2.1",
     "inquirer": "^1.0.3",
     "merge-config": "^2.0.0",
-    "mocha": "^2.5.3",
     "run-sequence": "^1.2.1",
-    "spectron": "^3.2.2",
     "underscore.string": "^3.3.4",
     "webpack-stream": "^3.2.0"
   },
@@ -44,8 +41,11 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.3",
     "proxyquire": "^1.7.9",
     "sinon": "^1.17.4"
+  },
+  "versions": {
+    "electron-prebuilt": "1.2.1"
   }
 }
