--- a/package.json
+++ b/package.json
@@ -42,6 +42,12 @@
     "sinon": "^1.17.4"
   },
   "versions": {
-    "electron-prebuilt": "1.2.1"
+    "electron-prebuilt": "1.2.2",
+    "electron-builder": "5.4.4",
+    "electron-packager-tf": "7.4.0",
+    "gulp": "^3.9.1",
+    "mocha": "^2.5.3",
+    "spectron": "^3.2.3",
+    "webpack-stream": "^3.2.0"
   }
 }
