--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "sinon": "^4.1.2"
   },
   "versions": {
-    "electron": "1.8.6",
-    "electron-builder": "19.56.2",
+    "electron": "2.0.0-beta.8",
+    "electron-builder": "20.11.0",
     "gulp": "^3.9.1",
     "mocha": "^4.0.1",
     "spectron": "^3.8.0",
