--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "sinon": "^5.0.3"
   },
   "versions": {
-    "electron": "2.0.0-beta.8",
+    "electron": "2.0.0",
     "electron-builder": "20.11.0",
     "gulp": "^3.9.1",
     "mocha": "^5.1.1",
