--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bozon",
-  "version": "0.8.12",
+  "version": "0.9.0-alpha.1",
   "description": "Framework for building Electron applications",
   "repository": {
     "type": "git",
