--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^4.1.0",
     "ejs": "^2.5.7",
     "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
     "gulp": "^4.0.0",
     "gulp-json-editor": "^2.5.1",
     "inquirer": "^6.3.1",
@@ -48,8 +49,6 @@
     "sinon": "^7.3.1"
   },
   "versions": {
-    "electron": "4.1.4",
-    "electron-builder": "20.39.0",
     "mocha": "^5.2.0",
     "spectron": "^5.0.0"
   }
