--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bozon",
-  "version": "0.9.0-beta.2",
+  "version": "0.9.0",
   "description": "Framework for building Electron applications",
   "repository": {
     "type": "git",
