--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
+    "build": "npx webpack",
     "test": "npx mocha test/lib --recursive --require coffeescript/register --extension coffee"
   },
   "keywords": [
@@ -44,12 +45,18 @@
     "node": ">= 8.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "coffeescript": "^2.5.1",
     "mocha": "^7.1.1",
     "mock-require": "^3.0.3",
     "require-reload": "^0.2.2",
-    "sinon": "^9.0.1"
+    "sinon": "^9.0.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "js-yaml": "^3.13.1",
