--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "npx webpack",
     "lint": "npx eslint src",
-    "test": "npx mocha test/lib --recursive --require coffeescript/register --extension coffee"
+    "test": "npx jest",
+    "test:legacy": "npx mocha test/lib --recursive --require coffeescript/register --extension coffee"
   },
   "keywords": [
     "electron",
@@ -49,6 +50,7 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
+    "babel-jest": "^25.2.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "coffeescript": "^2.5.1",
@@ -58,6 +60,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^25.2.0",
     "mocha": "^7.1.1",
     "mock-require": "^3.0.3",
     "prettier": "2.0.2",
