--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,14 @@
-.editorcofig
+.nvmrc
+.editorconfig
 .eslintrc.js
 .prettierrc.js
-.jest.config.js
-.webpack.config.js
-.babel.config.js
+jest.config.js
+webpack.config.js
+babel.config.js
+.vscode/
 .circleci/
-test/
+__test__/
+__mocks__/
+src/
 node_modules/
 yarn-error.log
