--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ora": "^4.0.3",
     "style-loader": "^1.1.3",
     "underscore.string": "^3.3.5",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "webpack-merge": "^4.2.2"
   },
   "preferGlobal": true,
   "bin": {
