--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "inquirer": "^7.1.0",
+    "latest-version": "^5.1.0",
     "merge-config": "^2.0.0",
     "ora": "^4.0.3",
     "style-loader": "^1.1.3",
@@ -70,9 +71,5 @@
     "minimist": "^1.2.5",
     "kind-of": "^6.0.3",
     "set-value": "^3.0.1"
-  },
-  "versions": {
-    "mocha": "^7.0.0",
-    "spectron": "^10.0.0"
   }
 }
