--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "commander": "^5.0.0",
     "copy": "^0.3.2",
     "css-loader": "^3.4.2",
-    "del": "^5.1.0",
     "ejs": "^3.0.1",
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
@@ -61,6 +60,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "fs-extra": "^9.0.0",
     "jest": "^25.2.3",
     "prettier": "2.0.2",
     "webpack-cli": "^3.3.11",
