--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "inquirer": "^7.1.0",
     "latest-version": "^5.1.0",
     "merge-config": "^2.0.0",
+    "nodemon": "^2.0.2",
     "ora": "^4.0.3",
     "style-loader": "^1.1.3",
     "underscore.string": "^3.3.5",
