--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   "author": "Railsware, Alex Chaplinsky",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^3.0.0",
+    "chalk": "^4.0.0",
     "chokidar": "^3.3.1",
     "commander": "^5.0.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.2",
     "ejs": "^3.0.2",
-    "electron": "^8.2.0",
+    "electron": "^8.2.1",
     "electron-builder": "^22.4.1",
     "inquirer": "^7.1.0",
     "latest-version": "^5.1.0",
     "lodash.debounce": "^4.0.8",
     "merge-config": "^2.0.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "style-loader": "^1.1.3",
     "underscore.string": "^3.3.5",
     "webpack": "^4.42.1",
@@ -53,8 +53,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "babel-jest": "^25.2.4",
+    "@babel/preset-env": "^7.9.5",
+    "babel-jest": "^25.3.0",
     "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
@@ -63,8 +63,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "fs-extra": "^9.0.0",
-    "jest": "^25.2.4",
-    "prettier": "2.0.2",
+    "jest": "^25.3.0",
+    "prettier": "^2.0.4",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
