--- a/package.json
+++ b/package.json
@@ -1,73 +1,67 @@
 {
-  "name": "bozon",
-  "version": "1.0.0-alpha.9",
-  "description": "Framework for building Electron applications",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/railsware/bozon.git"
-  },
-  "main": "lib/index.js",
-  "scripts": {
-    "dev": "npx webpack --watch",
-    "build": "npx webpack --mode production",
-    "lint": "npx eslint src",
-    "test": "npx jest",
-    "publish": "npm publish",
-    "release": "yarn build && yarn publish"
-  },
-  "keywords": [
-    "electron",
-    "desktop",
-    "application",
-    "framework",
-    "bozon"
-  ],
-  "author": "Railsware, Alex Chaplinsky",
-  "license": "MIT",
-  "dependencies": {
-    "chalk": "^4.0.0",
-    "chokidar": "^3.3.1",
-    "commander": "^5.0.0",
-    "css-loader": "^3.5.2",
-    "ejs": "^3.0.2",
-    "electron": "^8.2.1",
-    "electron-builder": "^22.4.1",
-    "inquirer": "^7.1.0",
-    "latest-version": "^5.1.0",
-    "merge-config": "^2.0.0",
-    "nodemon": "^2.0.3",
-    "style-loader": "^1.1.3",
-    "underscore.string": "^3.3.5",
-    "webpack": "^4.42.1",
-    "webpack-inject-plugin": "^1.5.4",
-    "webpack-merge": "^4.2.2"
-  },
-  "preferGlobal": true,
-  "bin": {
-    "bozon": "bin/bozon"
-  },
-  "engines": {
-    "node": ">= 10.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "babel-jest": "^25.3.0",
-    "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "fs-extra": "^9.0.0",
-    "jest": "^25.3.0",
-    "prettier": "^2.0.4",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "resolutions": {
-    "js-yaml": "^3.13.1"
-  }
+	"name": "bozon",
+	"version": "1.0.0-alpha.10",
+	"description": "Framework for building Electron applications",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/railsware/bozon.git"
+	},
+	"main": "lib/index.js",
+	"scripts": {
+		"dev": "npx webpack --watch",
+		"build": "npx webpack --mode production",
+		"lint": "npx eslint src",
+		"test": "npx jest",
+		"publish": "npm publish",
+		"release": "yarn build && yarn publish"
+	},
+	"keywords": [ "electron", "desktop", "application", "framework", "bozon" ],
+	"author": "Railsware, Alex Chaplinsky",
+	"license": "MIT",
+	"dependencies": {
+		"chalk": "^4.0.0",
+		"chokidar": "^3.3.1",
+		"commander": "^5.0.0",
+		"css-loader": "^3.5.2",
+		"ejs": "^3.0.2",
+		"electron": "^8.2.1",
+		"electron-builder": "^22.4.1",
+		"inquirer": "^7.1.0",
+		"latest-version": "^5.1.0",
+		"merge-config": "^2.0.0",
+		"nodemon": "^2.0.3",
+		"style-loader": "^1.1.3",
+		"underscore.string": "^3.3.5",
+		"webpack": "^4.42.1",
+		"webpack-inject-plugin": "^1.5.4",
+		"webpack-merge": "^4.2.2"
+	},
+	"preferGlobal": true,
+	"bin": {
+		"bozon": "bin/bozon"
+	},
+	"engines": {
+		"node": ">= 10.0.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/preset-env": "^7.9.5",
+		"babel-jest": "^25.3.0",
+		"babel-loader": "^8.1.0",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.1",
+		"fs-extra": "^9.0.0",
+		"jest": "^25.3.0",
+		"prettier": "^2.0.4",
+		"webpack-cli": "^3.3.11",
+		"webpack-node-externals": "^1.7.2"
+	},
+	"resolutions": {
+		"js-yaml": "^3.13.1"
+	}
 }
