--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bozon",
-	"version": "1.0.0-beta.1",
+	"version": "1.0.0",
 	"description": "Command line tool for building, testing and publishing modern Electron applications",
 	"repository": {
 		"type": "git",
