--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
 		"publish": "npm publish",
 		"release": "yarn build && yarn publish"
 	},
-	"keywords": [ "electron", "desktop", "application", "cli", "bozon" ],
+	"keywords": [
+		"electron",
+		"desktop",
+		"application",
+		"cli",
+		"bozon"
+	],
 	"author": "Railsware, Alex Chaplinsky",
 	"license": "MIT",
 	"dependencies": {
@@ -24,13 +30,13 @@
 		"commander": "^5.0.0",
 		"css-loader": "^3.5.2",
 		"ejs": "^3.0.2",
-		"electron": "^8.2.2",
-		"electron-builder": "^22.4.1",
+		"electron": "^8.2.3",
+		"electron-builder": "^22.5.1",
 		"inquirer": "^7.1.0",
 		"latest-version": "^5.1.0",
 		"merge-config": "^2.0.0",
 		"nodemon": "^2.0.3",
-		"style-loader": "^1.1.3",
+		"style-loader": "^1.1.4",
 		"underscore.string": "^3.3.5",
 		"webpack": "^4.42.1",
 		"webpack-inject-plugin": "^1.5.4",
