--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-	"name": "bozon",
-	"version": "1.0.3",
-	"description": "Command line tool for building, testing and publishing modern Electron applications",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/railsware/bozon.git"
-	},
-	"main": "lib/index.js",
-	"scripts": {
-		"dev": "npx webpack --watch",
-		"build": "npx webpack --mode production",
-		"lint": "npx eslint src",
-		"test": "npx jest",
-		"publish": "npm publish",
-		"release": "yarn build && yarn publish"
-	},
-	"keywords": [
-		"electron",
-		"desktop",
-		"application",
-		"cli",
-		"bozon"
-	],
-	"author": "Railsware, Alex Chaplinsky",
-	"license": "MIT",
-	"dependencies": {
-		"chalk": "^4.0.0",
-		"chokidar": "^3.4.0",
-		"commander": "^5.1.0",
-		"css-loader": "^3.5.3",
-		"ejs": "^3.1.2",
-		"electron": "^8.2.3",
-		"electron-builder": "^22.5.1",
-		"inquirer": "^7.1.0",
-		"latest-version": "^5.1.0",
-		"merge-config": "^2.0.0",
-		"nodemon": "^2.0.3",
-		"style-loader": "^1.2.0",
-		"underscore.string": "^3.3.5",
-		"webpack": "^4.43.0",
-		"webpack-inject-plugin": "^1.5.4",
-		"webpack-merge": "^4.2.2"
-	},
-	"preferGlobal": true,
-	"bin": {
-		"bozon": "bin/bozon"
-	},
-	"engines": {
-		"node": ">= 10.0.0"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.9.5",
-		"babel-jest": "^25.4.0",
-		"babel-loader": "^8.1.0",
-		"eslint": "^6.8.0",
-		"eslint-config-standard": "^14.1.1",
-		"eslint-plugin-import": "^2.20.2",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^4.0.1",
-		"fs-extra": "^9.0.0",
-		"jest": "^25.4.0",
-		"prettier": "^2.0.5",
-		"webpack-cli": "^3.3.11",
-		"webpack-node-externals": "^1.7.2"
-	},
-	"resolutions": {
-		"js-yaml": "^3.13.1"
-	}
+  "name": "bozon",
+  "version": "1.0.3",
+  "description": "Command line tool for building, testing and publishing modern Electron applications",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/railsware/bozon.git"
+  },
+  "main": "lib/index.js",
+  "scripts": {
+    "dev": "npx webpack --watch",
+    "build": "npx webpack --mode production",
+    "lint": "npx eslint src",
+    "test": "npx jest",
+    "publish": "npm publish",
+    "release": "yarn build && yarn publish"
+  },
+  "keywords": [
+    "electron",
+    "desktop",
+    "application",
+    "cli",
+    "bozon"
+  ],
+  "author": "Railsware, Alex Chaplinsky",
+  "license": "MIT",
+  "dependencies": {
+    "chalk": "^4.0.0",
+    "chokidar": "^3.4.0",
+    "commander": "^5.1.0",
+    "css-loader": "^3.5.3",
+    "ejs": "^3.1.2",
+    "electron": "^8.2.5",
+    "electron-builder": "^22.6.0",
+    "inquirer": "^7.1.0",
+    "latest-version": "^5.1.0",
+    "merge-config": "^2.0.0",
+    "nodemon": "^2.0.3",
+    "style-loader": "^1.2.1",
+    "underscore.string": "^3.3.5",
+    "webpack": "^4.43.0",
+    "webpack-inject-plugin": "^1.5.4",
+    "webpack-merge": "^4.2.2"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "bozon": "bin/bozon"
+  },
+  "engines": {
+    "node": ">= 10.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "babel-jest": "^25.5.1",
+    "babel-loader": "^8.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "fs-extra": "^9.0.0",
+    "jest": "^25.5.3",
+    "prettier": "^2.0.5",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "resolutions": {
+    "js-yaml": "^3.13.1",
+    "yargs-parser": "^13.1.2"
+  }
 }
