--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bozon",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Command line tool for building, testing and publishing modern Electron applications",
   "repository": {
     "type": "git",
@@ -29,13 +29,14 @@
     "chokidar": "^3.4.0",
     "commander": "^5.1.0",
     "css-loader": "^3.5.3",
-    "ejs": "^3.1.2",
-    "electron": "^8.2.5",
-    "electron-builder": "^22.6.0",
+    "ejs": "^3.1.3",
+    "electron": "^9.0.0",
+    "electron-builder": "^22.6.1",
     "inquirer": "^7.1.0",
     "latest-version": "^5.1.0",
     "merge-config": "^2.0.0",
-    "nodemon": "^2.0.3",
+    "node": "^14.2.0",
+    "nodemon": "^2.0.4",
     "style-loader": "^1.2.1",
     "underscore.string": "^3.3.5",
     "webpack": "^4.43.0",
@@ -55,7 +56,7 @@
     "@babel/preset-env": "^7.9.6",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -68,7 +69,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^3.14.0",
     "yargs-parser": "^18.1.3"
   }
 }
