--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
   },
   "resolutions": {
     "js-yaml": "^3.14.0",
-    "yargs-parser": "^18.1.3"
+    "yargs-parser": "^18.1.3",
+    "elliptic": ">=6.5.3",
+    "lodash": ">=4.17.19"
   }
 }
