--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "js-yaml": "^3.14.0",
     "yargs-parser": "^18.1.3",
     "elliptic": ">=6.5.3",
-    "lodash": ">=4.17.19"
+    "lodash": ">=4.17.19",
+    "serialize-javascript": "^4.0.0"
   }
 }
