--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "chokidar": "^3.4.2",
     "commander": "^6.0.0",
     "css-loader": "^4.2.1",
-    "ejs": "^3.1.3",
+    "ejs": "^3.1.5",
     "electron": "^9.2.0",
-    "electron-builder": "^22.8.0",
+    "electron-builder": "^22.8.1",
     "inquirer": "^7.3.3",
     "latest-version": "^5.1.0",
+    "lodash": "^4.17.20",
     "merge-config": "^2.0.0",
     "nodemon": "^2.0.4",
     "style-loader": "^1.2.1",
@@ -50,9 +51,9 @@
     "node": ">= 10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.7.0",
@@ -71,7 +72,7 @@
     "js-yaml": "^3.14.0",
     "yargs-parser": "^18.1.3",
     "elliptic": ">=6.5.3",
-    "lodash": ">=4.17.19",
+    "lodash": ">=4.17.20",
     "serialize-javascript": "^4.0.0"
   }
 }
