Update dev dependencies

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "commander": "^7.0.0",
     "css-loader": "^5.0.1",
     "ejs": "^3.1.5",
-    "electron": "^11.2.0",
+    "electron": "^11.2.1",
     "electron-builder": "^22.9.1",
+    "electron-notarize": "^1.0.0",
     "inquirer": "^7.3.3",
     "latest-version": "^5.1.0",
     "lodash": "^4.17.20",
@@ -51,21 +52,21 @@
     "node": ">= 10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.13.9",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.18.0",
+    "eslint": "^7.21.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "webpack-cli": "^4.3.1",
+    "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
   },
   "resolutions": {
