--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build_and_test:
     docker:
-      - image: circleci/node:14.2.0-stretch-browsers
+      - image: cimg/node:16.1.0-browsers
     steps:
 
       - restore_cache:
