--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bozon",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Command line tool for building, testing and publishing modern Electron applications",
   "repository": {
     "type": "git",
@@ -30,15 +30,15 @@
     "commander": "^9.3.0",
     "css-loader": "^6.7.1",
     "ejs": "^3.1.8",
-    "electron": "^19.0.4",
-    "electron-builder": "^23.0.3",
+    "electron": "^19.0.6",
+    "electron-builder": "^23.1.0",
     "electron-notarize": "^1.2.1",
     "elliptic": "^6.5.4",
     "inquirer": "^8.2.4",
     "latest-version": "^5.1.0",
     "lodash": "^4.17.21",
     "merge-config": "^2.0.0",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.18",
     "style-loader": "^3.3.1",
     "underscore.string": "^3.3.6",
     "webpack": "^5.73.0",
@@ -53,25 +53,26 @@
     "node": ">= 10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.18.2",
-    "babel-jest": "^28.1.1",
+    "@babel/preset-env": "^7.18.6",
+    "babel-jest": "^28.1.2",
     "babel-loader": "^8.2.5",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.2",
+    "eslint-plugin-n": "^15.2.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "fs-extra": "^10.1.0",
-    "jest": "^28.1.1",
-    "prettier": "^2.6.2",
-    "webpack-cli": "^4.9.2",
+    "jest": "^28.1.2",
+    "prettier": "^2.7.1",
+    "webpack-cli": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
+    "got": ">=11.8.5",
     "js-yaml": "^4.1.0",
     "yargs-parser": "^20.2.9",
     "lodash": "^4.17.21",
