--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron-builder": "^23.1.0",
     "electron-notarize": "^1.2.1",
     "elliptic": "^6.5.4",
+    "got": "^11.8.3",
     "inquirer": "^8.2.4",
     "latest-version": "^5.1.0",
     "lodash": "^4.17.21",
@@ -53,29 +54,30 @@
     "node": ">= 10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.18.6",
-    "babel-jest": "^28.1.2",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.18.0",
+    "@babel/preset-env": "^7.19.4",
+    "babel-jest": "^29.2.2",
+    "babel-loader": "^9.0.0",
+    "eslint": "^8.26.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-n": "^15.4.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "fs-extra": "^10.1.0",
-    "jest": "^28.1.2",
+    "jest": "^29.2.2",
     "prettier": "^2.7.1",
     "webpack-cli": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
-    "got": ">=11.8.5",
     "js-yaml": "^4.1.0",
     "yargs-parser": "^20.2.9",
     "lodash": "^4.17.21",
+    "minimatch": ">=3.0.5",
+    "terser": "^5.14.2",
     "xmldom": ">=0.5.0"
   }
 }
