--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
   "author": "Railsware, Alex Chaplinsky",
   "license": "MIT",
   "dependencies": {
+    "@electron/notarize": "^1.2.3",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "commander": "^9.3.0",
+    "commander": "^9.4.1",
     "css-loader": "^6.7.1",
     "ejs": "^3.1.8",
-    "electron": "^19.0.6",
-    "electron-builder": "^23.1.0",
-    "electron-notarize": "^1.2.1",
+    "electron": "^21.2.0",
+    "electron-builder": "^23.6.0",
     "elliptic": "^6.5.4",
     "got": "^11.8.3",
     "inquirer": "^8.2.4",
     "latest-version": "^5.1.0",
     "lodash": "^4.17.21",
     "merge-config": "^2.0.0",
-    "nodemon": "^2.0.18",
+    "nodemon": "^2.0.20",
     "style-loader": "^3.3.1",
     "underscore.string": "^3.3.6",
-    "webpack": "^5.73.0",
+    "webpack": "^5.74.0",
     "webpack-inject-plugin": "^1.5.5",
     "webpack-merge": "^5.8.0"
   },
